docs/guides/mysql/replication-mode-transform/remote-replica-mode-transfer/examples/mysql-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql-singapore
  namespace: demo
spec:
  ingressClassName: nginx
  rules:
    - host: mysql-singapore.something.org
      http:
        paths:
          - backend:
              service:
                name: mysql-singapore
                port:
                  number: 3306
            path: /
            pathType: Prefix
